Refactor to move VC success logic back into evalutate-gpg45-scores lambda